--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,6 +1,6 @@
                     <hr class="hr-line">
                     <h3 class="title" style="font-size:30px;">
                         {% for item in site.data.social %}
-                        <a class="social-btn" href="{{ item.link }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw {{ item.icon }}"></i></a>
+                        <a class="social-btn" href="{{ item.url }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw {{ item.icon }}"></i></a>
                         {% endfor %}
                   </h3>
